# AI2048

./: .gitignore  AI2048.cabal  Board.hs  LICENSE  Main.hs  README.md  StateExperiment.hs  Types.hs
exe/: Main.hs
src/: AIs.hs  Board.hs  Main.hs  Types.hs
test/: Test.hs
