name:                AI2048
version:             0.1.0.0
synopsis:            This is an AI that solves the game 2048.
license:             BSD3
license-file:        LICENSE
author:              Andreas Ekeroot
maintainer:          andeke@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable AI2048
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Board
  build-depends:       base,
                       containers,
                       MonadRandom,
                       mtl,
                       random,
                       vector
  default-language:    Haskell2010
