name:                AI2048
version:             0.1.0.0
synopsis:            This is an AI that solves the game 2048.
license:             BSD3
license-file:        LICENSE
author:              Andreas Ekeroot
maintainer:          andeke@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable AI2048
  main-is:             Main.hs
  hs-source-dirs:      exe
  build-depends:       base, AI2048
  default-language:    Haskell2010

library
  exposed-modules:     AIs, Board
  build-depends:       base,
                       containers,
                       MonadRandom,
                       random,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-AI2048
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base,
                       AI2048,
                       QuickCheck,
                       hspec,
                       vector
  default-language:    Haskell2010

